--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hero">
         <header>
             <div class="container">
-                <h1><a href="#" class="logo">ร้านน้ำผลไม้สดชื่น</a></h1>
+                <h1><a href="#" class="logo">Firstfast.com</a></h1>
                 <nav>
                     <ul>
                         <li><a href="#home" class="active">หน้าแรก</a></li>
