--- a/index.html
+++ b/index.html
@@ -9,24 +9,30 @@
 
 </head>
 <body>
-    <div class="hero">
-        <header>
-            <div class="container">
-                <h1><a href="#" class="logo">Firstfast.com</a></h1>
-                <nav>
-                    <ul>
-                        <li><a href="#home" class="active">หน้าแรก</a></li>
-                        <li><a href="#products">เมนู</a></li>
-                        <li><a href="#contact">ติดต่อเรา</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+<div class="hero">
+    <header>
+        <div class="container">
+            <h1><a href="#" class="logo">ร้านน้ำผลไม้สดชื่น</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="#home" class="active">หน้าแรก</a></li>
+                    <li><a href="#products">เมนู</a></li>
+                    <li><a href="#contact">ติดต่อเรา</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <div class="hero-content">
         <div class="container">
-            <h2>สดชื่นทุกหยด อร่อยทุกคำ</h2>
-            <p>ดื่มด่ำกับความสดชื่นจากธรรมชาติ</p>
-            <a href="#products" class="btn">ดูเมนู</a>
+            <div class="hero-image">
+                <img src="storefront.jpg" alt="รูปภาพหน้าร้าน">
+            </div>
+            <div class="hero-text">
+                <h2>สดชื่นทุกหยด อร่อยทุกคำ</h2>
+                <p>ดื่มด่ำกับความสดชื่นจากธรรมชาติ</p>
+                <a href="#products" class="btn">ดูเมนู</a>
+            </div>
         </div>
     </div>
 </div>
