--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 <div class="hero">
     <header>
+        <div class="hero">
+    <header>
         <div class="container">
             <h1><a href="#" class="logo">ร้านน้ำผลไม้สดชื่น</a></h1>
             <nav>
@@ -25,17 +27,12 @@
 
     <div class="hero-content">
         <div class="container">
-            <div class="hero-image">
-                <img src="storefront.jpg" alt="รูปภาพหน้าร้าน">
-            </div>
-            <div class="hero-text">
-                <h2>สดชื่นทุกหยด อร่อยทุกคำ</h2>
-                <p>ดื่มด่ำกับความสดชื่นจากธรรมชาติ</p>
-                <a href="#products" class="btn">ดูเมนู</a>
-            </div>
+            <h2>สดชื่นทุกหยด อร่อยทุกคำ</h2>
+            <p>ดื่มด่ำกับความสดชื่นจากธรรมชาติ</p>
+            <a href="#products" class="btn">ดูเมนู</a>
         </div>
     </div>
-</div>
+        </div>
 
     <main>
         <section id="products">
