--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <body>
 <div class="hero">
     <header>
-        <div class="hero">
-    <header>
         <div class="container">
             <h1><a href="#" class="logo">ร้านน้ำผลไม้สดชื่น</a></h1>
             <nav>
@@ -24,6 +22,15 @@
             </nav>
         </div>
     </header>
+
+    <div class="hero-content">
+        <div class="container">
+            <h2>สดชื่นทุกหยด อร่อยทุกคำ</h2>
+            <p>ดื่มด่ำกับความสดชื่นจากธรรมชาติ</p>
+            <a href="#products" class="btn">ดูเมนู</a>
+        </div>
+    </div>
+</div>
 
     <div class="hero-content">
         <div class="container">
